--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="src\index.css" rel="stylesheet" />
-    <title>Vite + React</title>
+    <title>EcoTrack</title>
   </head>
   <body>
     <div id="root"></div>
